# Hot_words_count_project

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Readme.md  cmake_install.cmake  compile_commands.json  config.ini
.cmake/api/v1/reply/: cache-v2-98c45f061b9fdb15dad5.json  cmakeFiles-v1-c01b6c058e2cc87b142c.json  codemodel-v2-5f9dcf0194226e2f5c62.json  index-2025-12-10T13-00-53-0711.json  target-hotwords-Debug-a37f0fa29ee16b8fcdad.json  target-info-Debug-0f18e22543d6e096b3f7.json
dict/: user.dict.utf8
input/: input1.txt  sensitive_words.txt  tag.txt  test_sentences.txt  unit_test_input.txt  user_word.txt
output/: output.txt  output_input1.txt  output_input2.txt  output_input3.txt  output_unit_test.txt  output_unit_test_base.txt
scripts/: main.cpp  unit_test.cpp  utils.hpp
src/: normalize.cpp  normalize.hpp
tests/: unit_test.cpp
webui/: app.py
webui/static/: main.js  styles.css
webui/templates/: index.html
提交文件/: 性能测试报告.md
